# G04-gruppe-4.5

./: .gitignore  AGENTS.md  README.md  requirements.txt
003_referanser/Kompendium/ch01-sec05-mange-variabler/: README.md  pyproject.toml
003_referanser/Kompendium/ch01-sec05-mange-variabler/data/: sales_panel.csv  sku_catalog.csv  weather.csv
003_referanser/Kompendium/ch01-sec05-mange-variabler/output/: cv_results.csv  descriptive_stats.json  feature_importance.csv  feature_summary.json  hyperparams.json  lgbm_predictions.parquet  shap_waterfall.json  split_info.json  validation_results.csv  validation_results.json
003_referanser/Kompendium/ch01-sec05-mange-variabler/src/: fig_model_diagrams.py  step01_datainnsamling.py  step02_feature_engineering.py  step03_datasplitting.py  step04_modell_estimering.py  step05_validering.py  step06_tolkning.py
003_referanser/Kompendium/ch02-sec05-ml-klassifisering/: README.md  pyproject.toml
003_referanser/Kompendium/ch02-sec05-ml-klassifisering/data/: aggregates.csv  features.parquet  master.csv  sku_catalog.csv  transactions.parquet
003_referanser/Kompendium/ch02-sec05-ml-klassifisering/output/: cost_simulation.json  cv_results.csv  descriptive_stats.json  feature_cols.json  hyperparams.json  lgbm_model.pkl  split_info.json  test_predictions.csv  top_features.csv  validation.json
003_referanser/Kompendium/ch02-sec05-ml-klassifisering/src/: fig_model_diagrams.py  step01_datainnsamling.py  step02_feature_engineering.py  step03_datasplitting.py  step04_modell_estimering.py  step05_validering.py  step06_tolkning.py
003_referanser/Kompendium/ch03-sec03-aggregert-lp/: README.md  pyproject.toml
003_referanser/Kompendium/ch03-sec03-aggregert-lp/data/: boat_demand.csv  parameters.json
003_referanser/Kompendium/ch03-sec03-aggregert-lp/output/: step01_stats.json  step02_model.txt  step02_stats.json  step03_duals.csv  step03_plan.csv  step03_summary.json  step04_capacity_sensitivity.csv  step04_demand_sensitivity.csv  step04_duals.csv  step04_summary.json  step05_stress.csv  step05_stress.json  step06_anbefaling.csv  step06_summary.json
003_referanser/Kompendium/ch03-sec03-aggregert-lp/src/: step01_datainnsamling.py  step02_modell_formulering.py  step03_lp_losning.py  step04_sensitivitet.py  step05_validering.py  step06_anbefaling.py
003_referanser/Kompendium/ch04-sec03-fasilitetsplassering/: README.md  pyproject.toml
003_referanser/Kompendium/ch04-sec03-fasilitetsplassering/data/: kandidater.csv  kunder.csv
003_referanser/Kompendium/ch04-sec03-fasilitetsplassering/output/: step01_stats.json  step02_cost_full.csv  step02_cost_per_unit.csv  step02_dist_km.csv  step02_stats.json  step03_summary.json  step04_assignment.csv  step04_summary.json  step05_fcost_scaling.csv  step05_p_median.csv  step05_summary.json  step06_anbefaling.json  step06_dc_loadings.csv  step06_rapport.txt  uflp_model.lp
003_referanser/Kompendium/ch04-sec03-fasilitetsplassering/src/: step01_datainnsamling.py  step02_avstandsmatrise.py  step03_mip_formulering.py  step04_mip_losning.py  step05_sensitivitet.py  step06_anbefaling.py
003_referanser/Kompendium/ch06-sec04-mmc-dimensjonering/: README.md  pyproject.toml
003_referanser/Kompendium/ch06-sec04-mmc-dimensjonering/data/: containerterminal-ankomster.csv
003_referanser/Kompendium/ch06-sec04-mmc-dimensjonering/output/: step01_descriptive_stats.json  step02_erlang_c.json  step03_service_dim.json  step04_cost_optim.json  (+2 more)
003_referanser/Kompendium/ch07-sec04-plukkruter/: README.md  pyproject.toml
003_referanser/Kompendium/ch07-sec05-integrert-lager/: README.md  pyproject.toml
003_referanser/Kompendium/ch09-sec05-disposisjon-tre/: README.md  pyproject.toml
003_referanser/Kompendium/ch11-sec04-robust-opt/: README.md  pyproject.toml
(+575 files in other folders)
