[project]
name = "ml-lagerklasse"
version = "0.1.0"
description = "Code for example: Data-driven inventory classification with LightGBM and SHAP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "scipy>=1.13",
    "lightgbm>=4.3",
    "shap>=0.45",
    "pyarrow>=23.0.1",
]
