[project]
name = "mmc-dimensjonering"
version = "0.1.0"
description = "M/M/c Erlang-C kapasitetsdimensjonering for containerterminalkraner"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "simpy>=4.1",
]
