[project]
name = "integrert-lager"
version = "0.1.0"
description = "Code for example: Integrert bolgeplanlegging, batching og ruteoptimering (MIP + k-medoids + largest-gap + SimPy)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "pulp>=2.7.0",
    "scipy>=1.11.0",
    "simpy>=4.1.1",
    "scikit-learn>=1.4.0",
]
